--- a/main.css
+++ b/main.css
@@ -14,8 +14,21 @@ body {
     margin: 0 !important;
 }
 
+#about {
+    color: white;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
 #desc {
     color: white;
+    background: #151d28;
+    border-radius: 25px;
+    padding: 20px;
+}
+
+#desc hr {
+    border-top: 1px solid rgba(255,255,255,.1);
 }
 
 #gametitle {
