--- a/main.css
+++ b/main.css
@@ -173,6 +173,11 @@ button {
     padding-bottom: 50px;
 }
 
+a.btn:link, a.btn:visited, a.btn:hover, a.btn:active {
+    text-decoration: none;
+    color: #fff !important;
+}
+
 .circle {
     width: 50px;
     height: 50px;
