--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 body {
-    background-color: #151d28 !important;
+  background-color: #151d28 !important;
 }
 
 #scrollbar {
-    overflow: hidden;
+  overflow: auto;
 }
 
 #avatar {
@@ -11,317 +11,323 @@ body {
 }
 
 .small {
-    font-size: 25px !important;
+  font-size: 25px !important;
 }
 
 #desc img {
-    max-width: 100% !important;
+  max-width: 100% !important;
 }
 
 #desc p {
-    margin: 0 !important;
+  margin: 0 !important;
 }
 
 #about {
-    color: white;
-    padding-bottom: 10px;
-    text-align: center;
+  color: white;
+  padding-bottom: 10px;
+  text-align: center;
 }
 
 #desc {
-    color: white;
-    background: #151d28;
-    border-radius: 25px;
-    padding: 20px;
+  color: white;
+  background: #151d28;
+  border-radius: 25px;
+  padding: 20px;
 }
 
 #desc hr {
-    border-top: 1px solid rgba(255,255,255,.1);
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 #gametitle {
-    color: white;
-    font-size: 30px;
+  color: white;
+  font-size: 30px;
 }
 
 #generatecode {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .footer {
-    font-weight: bold;
-    color: #fff;
-    padding-top: 10px;
+  font-weight: bold;
+  color: #fff;
+  padding-top: 10px;
 }
 
 .footer-larger {
-    font-size: 25px; 
-    font-weight: bold;
-    color: #fff;
+  font-size: 25px;
+  font-weight: bold;
+  color: #fff;
 }
 
-a:link, a:visited{
-    text-decoration: none;
-    color: #F4A52E;
+a:link,
+a:visited {
+  text-decoration: none;
+  color: #f4a52e;
 }
-a:hover, a:active {
-    color: #F4A52E !important;
+a:hover,
+a:active {
+  color: #f4a52e !important;
 }
 
 #title {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 
 #footer {
-    display: none;
+  display: none;
 }
 
 .appadd {
-    margin-bottom: 100px;
+  margin-bottom: 100px;
 }
 
 #name {
-    padding-bottom: 10px;
-    padding-top: 20px;
-    margin: 0;
+  padding-bottom: 10px;
+  padding-top: 20px;
+  margin: 0;
 }
 
 .header {
-    margin-top: 25vh !important;
+  margin-top: 25vh !important;
 }
 
 #twitter-timeline {
-    padding-left: 0;
-    padding-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .twitter {
-    background: #1da1f3;
-    border-radius: 25px;
-    padding: 50px;
+  background: #1da1f3;
+  border-radius: 25px;
+  padding: 50px;
 }
 
 .twitter-timeline {
-    border-radius: 25px !important;
+  border-radius: 25px !important;
 }
 
 header.masthead {
-    padding-top: 0 !important;    
-    background: #151d28 !important;
-    padding-bottom: 2rem !important;
+  padding-top: 0 !important;
+  background: #151d28 !important;
+  padding-bottom: 2rem !important;
 }
 
 section {
-    background: #151d28 !important;
+  background: #151d28 !important;
 }
 
 button {
-    margin-top: 0 !important;
+  margin-top: 0 !important;
 }
 
 #vods {
-    color: #fff;  
+  color: #fff;
 }
 
 #bio {
-    padding-left: 25%;
-    padding-right: 25%;
+  padding-left: 25%;
+  padding-right: 25%;
 }
 
 #app {
-    position:relative;
-    text-align:center;
-    top: 50%;
-    height: 100%;
-    width: 100%;
-    font-family: "Century Gothic";
-    border-radius: 25px;
-    margin-top: -25px;
-    color: #fff;
-    padding-top: 0;
-    background-size: cover !important;
+  position: relative;
+  text-align: center;
+  top: 50%;
+  height: 100%;
+  width: 100%;
+  font-family: "Century Gothic";
+  border-radius: 25px;
+  margin-top: -25px;
+  color: #fff;
+  padding-top: 0;
+  background-size: cover !important;
 }
 
 .layer {
-    border-radius: 25px;
-    padding: 50px;
+  border-radius: 25px;
+  padding: 50px;
 }
 
-#viewers::before{
-    padding-right: 4px;
-    padding-left: 4px;
+#viewers::before {
+  padding-right: 4px;
+  padding-left: 4px;
 }
 
 #embed {
-    border: 0; 
-    width: 91%;
-    height: 500px;
-    border-radius: 25px;
+  border: 0;
+  width: 91%;
+  height: 500px;
+  border-radius: 25px;
 }
 
 #feedback {
-    color: #F4A52E;
-    font-weight: bolder;
-    font-size: 20px;
-    text-align: center;
+  color: #f4a52e;
+  font-weight: bolder;
+  font-size: 20px;
+  text-align: center;
 }
 
 .titles {
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
-    padding-top: 25px;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+  padding-top: 25px;
 }
 
 .padd {
-    padding-bottom: 50px;
+  padding-bottom: 50px;
 }
 
-a.btn:link, a.btn:visited, a.btn:hover, a.btn:active {
-    text-decoration: none;
-    color: #fff !important;
+a.btn:link,
+a.btn:visited,
+a.btn:hover,
+a.btn:active {
+  text-decoration: none;
+  color: #fff !important;
 }
 
 .circle {
-    width: 50px;
-    height: 50px;
-    right: -3px;
-    bottom: -3px;
-    border-radius: 100%;
+  width: 50px;
+  height: 50px;
+  right: -3px;
+  bottom: -3px;
+  border-radius: 100%;
 }
 
-.container { 
-    padding-top: 50px;
+.container {
+  padding-top: 50px;
 }
 
 #widget {
-    padding-top: 80px;
+  padding-top: 80px;
 }
 
 .viewers-cont {
-    padding-top: 25px;
+  padding-top: 25px;
 }
 
 #viewers {
-    color:#282828;
-    font-size: 20px;
-    padding-bottom: 5px;
-    margin-top: 0px;
-    padding:5px;
-    border-radius:20px;
-    font-family: 'Century Gothic';
-    font-weight:bolder;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 7px;
-    white-space: nowrap;
+  color: #282828;
+  font-size: 20px;
+  padding-bottom: 5px;
+  margin-top: 0px;
+  padding: 5px;
+  border-radius: 20px;
+  font-family: "Century Gothic";
+  font-weight: bolder;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 7px;
+  white-space: nowrap;
 }
 
-
-
 #sub {
-    font-weight: bold;
-    font-family: "Century Gothic";
-    border-radius: 25px;
-    padding: 20px;
-    font-size: 20px;
+  font-weight: bold;
+  font-family: "Century Gothic";
+  border-radius: 25px;
+  padding: 20px;
+  font-size: 20px;
 }
 
 .partner {
-    width: auto;
-    height: 20px;
-    margin-left: 10px;
+  width: auto;
+  height: 20px;
+  margin-left: 10px;
 }
 
-#level, #sparks, #xp, #age {
-    border-radius: 20px;
-    background: rgba(0,0,0, 0.3);
-    line-height: 65px;
-    padding: 10px 15px;
-    color: #fff;
-    white-space: nowrap;
-    font-weight: bold;
+#level,
+#sparks,
+#xp,
+#age {
+  border-radius: 20px;
+  background: rgba(0, 0, 0, 0.3);
+  line-height: 65px;
+  padding: 10px 15px;
+  color: #fff;
+  white-space: nowrap;
+  font-weight: bold;
 }
 
-.groups { 
-    color: #fff;
+.groups {
+  color: #fff;
 }
 
 .sparks {
-    color: #00bcf2;
+  color: #00bcf2;
 }
 
 #code {
-    border-radius: 25px;
-    background: #282828;
-    color: #fff;
-    border: none;
-    scrollbar-arrow-color:pink; 
-    scrollbar-base-color:red; 
-    scrollbar-darkshadow-color:blue; 
-    scrollbar-highlight-color:orange; 
-    scrollbar-shadow-color:green;
-    width: 100%;
-    overflow: hidden;
+  border-radius: 25px;
+  background: #282828;
+  color: #fff;
+  border: none;
+  scrollbar-arrow-color: pink;
+  scrollbar-base-color: red;
+  scrollbar-darkshadow-color: blue;
+  scrollbar-highlight-color: orange;
+  scrollbar-shadow-color: green;
+  width: 100%;
+  overflow: hidden;
 }
 
 .status {
-    padding-left: 20px;
-    white-space: nowrap;
+  padding-left: 20px;
+  white-space: nowrap;
 }
 
 .followers {
-    border-radius: 25px;
-    font-size: 25px;
-    margin-left: 7px;
-    color: #fff;
+  border-radius: 25px;
+  font-size: 25px;
+  margin-left: 7px;
+  color: #fff;
 }
 
 #audience {
-    border-radius: 25px;
-    padding: 5px 10px;
-    font-size: 20px;
-    margin-left: 7px;
-    white-space: nowrap;
+  border-radius: 25px;
+  padding: 5px 10px;
+  font-size: 20px;
+  margin-left: 7px;
+  white-space: nowrap;
 }
 
 #status {
-    border-radius: 25px;
-    padding: 5px 10px;
-    font-size: 20px;
+  border-radius: 25px;
+  padding: 5px 10px;
+  font-size: 20px;
 }
 
 #alphanote {
-    display: none;
+  display: none;
 }
 
 .uname:focus {
-    outline: none;
+  outline: none;
 }
 
 .uname {
-    -webkit-writing-mode: horizontal-tb !important;
-    text-rendering: auto;
-    color: initial;
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: start;
-    color: #fff;
-    -webkit-appearance: textfield;
-    background-color: #282828;
-    -webkit-rtl-ordering: logical;
-    cursor: text;
-    margin: 0em;
-    border-radius: 25px;
-    font: 400 13.3333px Arial;
-    /* padding: 1px 0px; */
-    border-width: 2px;
-    border-style: inset;
-    border-color: initial;
-    border-image: initial;
-    padding: 20px;
-    font-size: 20px;
-    border: none;
+  -webkit-writing-mode: horizontal-tb !important;
+  text-rendering: auto;
+  color: initial;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  display: inline-block;
+  text-align: start;
+  color: #fff;
+  -webkit-appearance: textfield;
+  background-color: #282828;
+  -webkit-rtl-ordering: logical;
+  cursor: text;
+  margin: 0em;
+  border-radius: 25px;
+  font: 400 13.3333px Arial;
+  /* padding: 1px 0px; */
+  border-width: 2px;
+  border-style: inset;
+  border-color: initial;
+  border-image: initial;
+  padding: 20px;
+  font-size: 20px;
+  border: none;
 }
